--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1 class="header">this is header</h1>
     <h2 class="header2">this is second header</h2>
     <p>this is paragrapgh of test branch</p>
+    <p>this is paragarpgh of master branch</p>
 </body>
 </html>
